--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,7 +39,5 @@ dependencies {
     //Retrofit and Gson
     implementation 'com.squareup.retrofit2:retrofit:2.4.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.4.0'
-
-    //recaptcha
-    implementation 'com.google.android.gms:play-services-recaptcha:16.0.1'
-}
+    implementation'com.squareup.retrofit2:converter-scalars:2.5.0'
+    }
