--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,7 +45,7 @@ dependencies {
     implementation 'com.google.android.gms:play-services-recaptcha:16.0.1'
 
     //Facebook Login
-    implementation 'com.facebook.android:facebook-login:latest.release'
+    implementation 'com.facebook.android:facebook-login:[5,6)'
 
     //Google Login
     implementation 'com.google.android.gms:play-services-auth:19.2.0'
