--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,6 +53,12 @@ dependencies {
     //Google Login
     implementation 'com.google.android.gms:play-services-auth:19.2.0'
 
+    //circular image
+    implementation 'de.hdodenhof:circleimageview:3.1.0'
+
+//    //Country code picker
+//    implementation 'com.github.joielechong:countrycodepicker:2.0.0'
+
 }
 
 
