--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,7 +53,8 @@ dependencies {
     //Google Login
     implementation 'com.google.android.gms:play-services-auth:19.2.0'
 
-    //Country Picker
+    //Round Image
+    implementation 'de.hdodenhof:circleimageview:3.1.0'
 
 }
 
