--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,15 +15,18 @@
         <activity
             android:name=".UI.AccountAndWallet.AccountWalletActivity"
             android:exported="true" >
+
+        </activity>
+        <activity
+            android:name=".UI.Orders.OrderActivity"
+            android:exported="true">
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity
-            android:name=".UI.Orders.OrderActivity"
-            android:exported="true" />
         <activity
             android:name=".UI.OnBoarding.OnBoardingActivity"
             android:exported="true" />
