--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,13 +14,10 @@
         android:usesCleartextTraffic="true">
         <activity
             android:name=".UI.AccountAndWallet.AccountWalletActivity"
-            android:exported="true" >
-
-        </activity>
+            android:exported="true"></activity>
         <activity
             android:name=".UI.Orders.OrderActivity"
             android:exported="true">
-
 
         </activity>
         <activity
