--- a/app/build.gradle
+++ b/app/build.gradle
@@ -67,6 +67,11 @@ dependencies {
 
     implementation 'com.github.vihtarb:tooltip:0.1.9'
 
+
+    //Glide
+
+    implementation 'com.github.bumptech.glide:glide:4.12.0'
+
     
 }
 
