--- a/app/build.gradle
+++ b/app/build.gradle
@@ -72,6 +72,10 @@ dependencies {
 
     implementation 'com.github.bumptech.glide:glide:4.12.0'
 
+    ///Profile image Letter
+
+    implementation 'com.amulyakhare:com.amulyakhare.textdrawable:1.0.1'
+
     
 }
 
