--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Shoppre"
         android:usesCleartextTraffic="true"
+
         >
 
         <activity
@@ -22,6 +23,7 @@
             android:exported="true" />
         <activity
             android:screenOrientation="portrait"
+            android:windowSoftInputMode="adjustPan"
             android:name=".UI.Orders.OrderActivity"
             android:exported="true" />
         <activity
