--- a/app/build.gradle
+++ b/app/build.gradle
@@ -76,7 +76,11 @@ dependencies {
 
     implementation 'com.amulyakhare:com.amulyakhare.textdrawable:1.0.1'
 
-    
+    //Exo Player
+
+    implementation 'com.google.android.exoplayer:exoplayer:2.16.1'
+
+
 }
 
 
