--- a/app/build.gradle
+++ b/app/build.gradle
@@ -80,6 +80,10 @@ dependencies {
 
     implementation 'com.amulyakhare:com.amulyakhare.textdrawable:1.0.1'
 
+    //ScrollView
+
+    implementation 'ru.noties:scrollable:1.3.0'
+
 
 
 
