--- a/app/build.gradle
+++ b/app/build.gradle
@@ -84,7 +84,10 @@ dependencies {
 
     implementation 'ru.noties:scrollable:1.3.0'
 
+    implementation "com.github.skydoves:powermenu:2.2.0"
 
+
+    implementation "androidx.coordinatorlayout:coordinatorlayout:1.1.0"
 
 
 }
