--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,10 +33,21 @@
             android:screenOrientation="portrait"
             android:name=".UI.SignupLogin.SignUpActivity"
             android:exported="true" >
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+
+                <data
+                    android:scheme="https"
+                    android:host="merashoppre.com"
+                    android:path="/signup"/>
             </intent-filter>
         </activity>
         <activity
@@ -59,6 +70,8 @@
             android:screenOrientation="portrait"
             android:name=".UI.SignupLogin.SignUp_Valid"
             android:exported="true" /> <!-- Facebook -->
+
+
         <activity
             android:screenOrientation="portrait"
             android:name="com.facebook.FacebookActivity"
