--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,6 +29,7 @@ android {
     buildToolsVersion '31.0.0'
 }
 
+apply plugin: 'com.google.firebase.crashlytics'
 dependencies {
 
     implementation 'androidx.appcompat:appcompat:1.3.1'
@@ -98,6 +99,11 @@ dependencies {
     implementation 'com.mindorks.android:prdownloader:0.6.0'
 
 
+    // Import the BoM for the Firebase platform
+    implementation platform('com.google.firebase:firebase-bom:29.0.3')
+
+    implementation 'com.google.firebase:firebase-crashlytics:18.2.6'
+    implementation 'com.google.firebase:firebase-analytics:20.0.2'
 
 }
 
