--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,43 +1,54 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.shoppreglobal.shoppre" >
+    package="com.shoppreglobal.shoppre">
 
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
+        android:requestLegacyExternalStorage="true"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Shoppre"
-        android:usesCleartextTraffic="true"
-        android:requestLegacyExternalStorage="true">
+        android:usesCleartextTraffic="true">
 
         <activity
-            android:screenOrientation="portrait"
             android:name="com.shoppreglobal.shoppre.UI.AccountAndWallet.AccountWalletActivity"
-            android:exported="true" />
+            android:exported="true"
+            android:screenOrientation="portrait" />
         <activity
-            android:screenOrientation="portrait"
-            android:windowSoftInputMode="adjustPan"
             android:name="com.shoppreglobal.shoppre.UI.Orders.OrderActivity"
-            android:exported="true" >
+            android:exported="true"
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="adjustPan">
             <intent-filter>
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+
+                <data
+                    android:host="uat-login.shoppreglobal.com"
+                    android:path="/api/users/public/verify"
+                    android:scheme="https" />
+            </intent-filter>
         </activity>
         <activity
-            android:screenOrientation="portrait"
             android:name="com.shoppreglobal.shoppre.UI.OnBoarding.OnBoardingActivity"
-            android:exported="true" />
+            android:exported="true"
+            android:screenOrientation="portrait" />
         <activity
-            android:screenOrientation="portrait"
             android:name="com.shoppreglobal.shoppre.UI.SignupLogin.SignUpActivity"
-            android:exported="true" >
+            android:exported="true"
+            android:screenOrientation="portrait">
 
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -47,47 +58,60 @@
 
         </activity>
         <activity
-            android:screenOrientation="portrait"
             android:name="com.shoppreglobal.shoppre.UI.SignupLogin.LoginActivity"
-            android:exported="true" />
+            android:exported="true"
+            android:screenOrientation="portrait" />
         <activity
-            android:screenOrientation="portrait"
             android:name="com.shoppreglobal.shoppre.UI.SignupLogin.ResetPassword"
-            android:exported="true" />
-        <activity
-            android:screenOrientation="portrait"
-            android:name="com.shoppreglobal.shoppre.UI.SignupLogin.ForgotPasswordMessage"
-            android:exported="true" />
-        <activity
-            android:screenOrientation="portrait"
-            android:name="com.shoppreglobal.shoppre.UI.SignupLogin.ForgetPassword"
-            android:exported="true" />
-        <activity
-            android:screenOrientation="portrait"
-            android:name="com.shoppreglobal.shoppre.UI.SignupLogin.SignUp_Valid"
-            android:exported="true" >
+            android:exported="true"
+            android:screenOrientation="portrait" >
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
+
                 <category android:name="android.intent.category.DEFAULT" />
                 <category android:name="android.intent.category.BROWSABLE" />
 
                 <data
-                    android:scheme="https"
-                    android:host="merashoppre.com"
-                    android:path="/signup"/>
+                    android:host="uat-login.shoppreglobal.com"
+                    android:path="/password-reset"
+                    android:scheme="https" />
+            </intent-filter>
+        </activity>
+        <activity
+            android:name="com.shoppreglobal.shoppre.UI.SignupLogin.ForgotPasswordMessage"
+            android:exported="true"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name="com.shoppreglobal.shoppre.UI.SignupLogin.ForgetPassword"
+            android:exported="true"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name="com.shoppreglobal.shoppre.UI.SignupLogin.SignUp_Valid"
+            android:exported="true"
+            android:screenOrientation="portrait">
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+
+                <data
+                    android:host="login.shoppre.com"
+                    android:path="/signup"
+                    android:scheme="https" />
             </intent-filter>
         </activity> <!-- Facebook -->
 
 
         <activity
-            android:screenOrientation="portrait"
             android:name="com.facebook.FacebookActivity"
             android:configChanges="keyboard|keyboardHidden|screenLayout|screenSize|orientation"
-            android:label="@string/app_name" />
+            android:label="@string/app_name"
+            android:screenOrientation="portrait" />
         <activity
 
             android:name="com.facebook.CustomTabActivity"
-            android:exported="true" >
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
 
