--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Shoppre"
         android:usesCleartextTraffic="true">
+        <activity
+            android:name=".UI.SignupLogin.LockAccountActivity"
+            android:exported="true" />
 
         <provider
             android:name="androidx.core.content.FileProvider"
@@ -28,11 +31,11 @@
         </provider>
 
         <activity
-            android:name="com.shoppreglobal.shoppre.UI.AccountAndWallet.AccountWalletActivity"
+            android:name=".UI.AccountAndWallet.AccountWalletActivity"
             android:exported="true"
             android:screenOrientation="portrait" />
         <activity
-            android:name="com.shoppreglobal.shoppre.UI.Orders.OrderActivity"
+            android:name=".UI.Orders.OrderActivity"
             android:exported="true"
             android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustPan">
@@ -52,29 +55,27 @@
             </intent-filter>
         </activity>
         <activity
-            android:name="com.shoppreglobal.shoppre.UI.OnBoarding.OnBoardingActivity"
+            android:name=".UI.OnBoarding.OnBoardingActivity"
             android:exported="true"
             android:screenOrientation="portrait" />
         <activity
-            android:name="com.shoppreglobal.shoppre.UI.SignupLogin.SignUpActivity"
+            android:name=".UI.SignupLogin.SignUpActivity"
             android:exported="true"
             android:screenOrientation="portrait">
-
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-
         </activity>
         <activity
-            android:name="com.shoppreglobal.shoppre.UI.SignupLogin.LoginActivity"
+            android:name=".UI.SignupLogin.LoginActivity"
             android:exported="true"
             android:screenOrientation="portrait" />
         <activity
-            android:name="com.shoppreglobal.shoppre.UI.SignupLogin.ResetPassword"
+            android:name=".UI.SignupLogin.ResetPassword"
             android:exported="true"
-            android:screenOrientation="portrait" >
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
 
@@ -88,15 +89,15 @@
             </intent-filter>
         </activity>
         <activity
-            android:name="com.shoppreglobal.shoppre.UI.SignupLogin.ForgotPasswordMessage"
+            android:name=".UI.SignupLogin.ForgotPasswordMessage"
             android:exported="true"
             android:screenOrientation="portrait" />
         <activity
-            android:name="com.shoppreglobal.shoppre.UI.SignupLogin.ForgetPassword"
+            android:name=".UI.SignupLogin.ForgetPassword"
             android:exported="true"
             android:screenOrientation="portrait" />
         <activity
-            android:name="com.shoppreglobal.shoppre.UI.SignupLogin.SignUp_Valid"
+            android:name=".UI.SignupLogin.SignUp_Valid"
             android:exported="true"
             android:screenOrientation="portrait">
             <intent-filter>
@@ -111,15 +112,12 @@
                     android:scheme="https" />
             </intent-filter>
         </activity> <!-- Facebook -->
-
-
         <activity
             android:name="com.facebook.FacebookActivity"
             android:configChanges="keyboard|keyboardHidden|screenLayout|screenSize|orientation"
             android:label="@string/app_name"
             android:screenOrientation="portrait" />
         <activity
-
             android:name="com.facebook.CustomTabActivity"
             android:exported="true">
             <intent-filter>
